# beancount-icabanken

./: Makefile  README.md  config.py  pyproject.toml
beancount_icabanken/: ib.py  loader.py  utils.py
tests/: t.csv  test_ib.py  test_ib_loader.py
