[tool.poetry]
name = "beancount-icabanken"
version = "0.2.0"
description = ""
authors = ["Per Lejon <per@lejon.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
babel = "^2.13.0"
pydantic = "^2.4.2"
beancount = "^2.3.6"
fava = "^1.26.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
